deployment/spinnaker/gate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gate-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /gate/
        backend:
          serviceName: spin-gate
          servicePort: 8084
