deployment/spinnaker/spin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /spin/
        backend:
          serviceName: spin-deck
          servicePort: 9000
